client/src/styles/scss/variables/_variables.scss
@use 'sass:math';
@import './spacing';
@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500;600;700&display=swap');

$main-font-family: 'Red Hat Display', sans-serif;

// Colours 
$primary-colour: #70A7B2;
$primary-font-colour: #FFFFFF;
$primary-bg-colour: #000000;
$rating-container-bg-colour: linear-gradient(90deg, rgba(117, 155, 163, 0.37) 0%, rgba(117, 155, 163, 0.37) 100%);
$foreground-overlay: linear-gradient(180deg, rgba(0, 0, 0, 0.32) 42.59%, #000000 100%);

// Buttons
@mixin main-btn {
  padding: 18px 23px;
  @include body-regular;
  font-weight: bold;
  border-radius: $spacing-16;
  border: none;
}

@mixin reset-btn {
  border: none;
  background: transparent;
}

/* Typography */
// H1
@mixin h1 {
  font-size: clamp(pxToRem(30px), 6vw, pxToRem(60px));
  font-weight: $font-weight-bold;
}

@mixin h2 {
  font-size: clamp( pxToRem(24px), 6vw, pxToRem(48px));
  font-weight: $font-weight-bold;
}

@mixin h3 {
  font-size: clamp(pxToRem(18px), 6vw, pxToRem(40px));
  font-weight: $font-weight-bold;
}

@mixin subtitle {
  font-size: clamp(pxToRem(20px), 6vw, pxToRem(28px));
  font-weight: $font-weight-regular;
}

@mixin subtitle2 {
  font-size: clamp(pxToRem(10px), 6vw, pxToRem(18px));
  font-weight: $font-weight-regular;
  letter-spacing: 0.4px;
  text-transform: capitalize;
}

@mixin body-regular {
  font-size: clamp(pxToRem(16px), 1.5vw, pxToRem(20px));
  font-weight: $font-weight-regular;
  line-height: 32px;
}

/* Font Weights */
$font-weight-light: 300;
$font-weight-regular: 400;
$font-weight-medium: 500;
$font-weight-semi: 600;
$font-weight-bold: 700;

@mixin flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
}

// Converts pixel to rem
@function pxToRem($pxValue) {
    @return math.div($pxValue, 16px) * 1rem; 
}

